hphp/test/zend/good/ext/sockets/tests/socket_strerror.php.skipif
<?php
    if (!extension_loaded('sockets') || !function_exists('socket_strerror')) {
        die('skip sockets extension not available.');
    }
    if (!stristr(PHP_OS, "Linux")) {
        die('skip - test validates linux error strings only.');
    }
?>