hphp/test/zend/bad/ext/standard/tests/file/lstat_stat_variation6.php.skipif
<?php
if (getenv("SKIP_SLOW_TESTS")) die("skip slow test");
if (!(stristr(PHP_OS, 'linux')))  {
    die('skip.. test valid for linux only');
}

// checking for atime update whether it is enabled or disabled
exec("mount", $mount_output);
foreach( $mount_output as $out )  {
  if( stristr($out, "noatime") )
     die('skip.. atime update is disabled, hence skip the test');
}

?>